# blockhost-broker

./: .gitignore  BROKER_INTERFACE.md  CLAUDE.md  DESIGN.md  README.md  SESSION_CONTEXT.md  TODO.md  build-debs.sh  config.example.toml  pyproject.toml  registry-cardano-preprod.json  registry-ergo-testnet.json  registry-opnet-regtest.json  registry-opnet-testnet.json  registry-testnet.json  registry.json
adapters/_shared/: package-lock.json  package.json  tsconfig.json
adapters/cardano/: test-e2e.ts  test-live.ts
adapters/ergo/: deploy-registry.ts
blockhost-broker-manager/: build-deb.sh  requirements.txt
blockhost-broker-manager/debian/: blockhost-broker-manager.service  control  postinst
blockhost-broker-manager/manager/: __init__.py  app.py  auth.py  broker.py
blockhost-broker-rs/: Cargo.toml  build-deb.sh  build.rs
blockhost-broker-rs/contracts/abi/: BrokerRegistry.json  BrokerRequests.json
blockhost-broker-rs/debian/: blockhost-broker.service  changelog  config  config.toml.example  control  postinst  rules  templates
blockhost-broker-rs/migrations/: 001_initial.sql
blockhost-broker-rs/src/: alloc.rs  config.rs  dns.rs  main.rs  setup.rs
blockhost-broker-rs/src/api/: handlers.rs  mod.rs
blockhost-broker-rs/src/crypto/: ecies.rs  mod.rs
blockhost-broker-rs/src/db/: ipam.rs  mod.rs  models.rs
blockhost-broker-rs/src/eth/: broker_registry.rs  broker_requests.rs  contracts.rs  mod.rs  monitor.rs  verifier.rs
blockhost-broker-rs/src/wg/: manager.rs  mod.rs
contracts/: BrokerRegistry.sol  BrokerRequests.sol
contracts-foundry/script/: Deploy.s.sol  DeployV2.s.sol
contracts-foundry/src/: BrokerRegistry.sol  BrokerRequests.sol
contracts-foundry/test/: BrokerRegistry.t.sol  BrokerRequests.t.sol
contracts-opnet/broker-registry/: package-lock.json
contracts-opnet/broker-requests/: package-lock.json
debian/: blockhost-broker.dirs  blockhost-broker.install  blockhost-broker.postinst  blockhost-broker.service  changelog  control  copyright  rules
docs/plans/: 2026-02-27-email-server-design.md  2026-03-18-cardano-adapter-design.md  2026-03-18-cardano-adapter-plan.md
scripts/: README.md  broker-chains.json  broker-chains.json.example  broker-client.py  build-deb.sh  requirements.txt  test_request_id_prefix.py
scripts/debian/: control  (+2 more)
(+113 files in other folders)
